加入权限验证

--- a/mysite/my.cnf
+++ b/mysite/my.cnf
@@ -1,5 +1,5 @@
 [client]
-database = web2
-user = root
-password = syuhung
+database = web_dev
+user = dev
+password = 1234
 default-character-set = utf8
